# shamir-bip39

./: .editorconfig  .gitignore  .licensesnip  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  flake.nix  rust-toolchain  tarpaulin.toml  typos.toml
.github/workflows/: code.yml  lint.yml  release.yml  rust.yml  updates.yml
assets/: test-vectors.txt
nix/: minimal-kernel.config
src/: bip39.rs  gf256.rs  main.rs  shamir.rs  traits.rs  utils.rs
