[package]
name = "sss-bip39"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
eyre = "0.6.8"
color-eyre = "0.6.2"
fastcrypto = "0.1.5"
gf256 = "0.3.0"
clap = { version = "4.3.3", features = ["derive"] }