[package]
name = "shamir-bip39"
version = "0.1.0"
authors = ["alberto@sonnino.com"]
edition = "2021"
rust-version = "1.69.0"
description = "A command line tool to generate Shamir Secret Sharing shares from a BIP39 mnemonic"
readme = "README.md"
homepage = "https://github.com/asonnino/shamir-bip39"
repository = "https://github.com/asonnino/shamir-bip39"
license-file = "LICENSE"
keywords = [
  "shamir",
  "secret-sharing",
  "bip39",
  "mnemonic",
  "wallet",
  "bitcoin",
  "ethereum",
  "crypto",
  "cryptocurrency",
  "blockchain",
  "recovery",
]
categories = [
  "command-line-utilities",
  "cryptography",
  "cryptography::cryptocurrencies",
]
publish = false

[badges]
maintenance = { status = "experimental" }

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
colored = "2.1.0"
eyre = "0.6.12"
fastcrypto = "0.1.8"
gf256 = "0.3.0"
itertools = { version = "0.14.0", optional = true }
prettytable-rs = "0.10.0"
rand = "0.9.0"

[features]
double-check = ["itertools"]
